Updated comments controller
