# backend/public/api-docs/api.yaml
@@ -173,8 +173,6 @@ components:
             comment_text:
               type: string
               maximum: 256
-            comment_has_replays:
-              type: boolean
     CommentListResponseDataItem:
       type: object
       properties:
@@ -216,8 +214,6 @@ components:
           type: string
         comment_text:
           type: string
-        comment_has_replays:
-              type: boolean
         createdAt:
           type: string
           format: date-time
